# negentropic-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DECISIONS.md  LICENSE  PR_DESCRIPTION.md  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: oracle_validation.yml
architecture/: Architectural_Quick-Ref.md  Atmospheric_and_Cloud_System_v0.3.3.md  CI_Oracle_and_Validation_Protocol_v0.3.3.md  Core_Physics_Specification_v0.3.3.md  Deterministic_Numerics_Standard_v0.3.3.md  LoD_and_Cascading_Simulation_System_v0.3.3.md  Memory_Architecture_and_SAB_Layout_v0.3.3.md  Torsion_Tensor_Module_v0.3.3.md  Unity_and_Web_Interop_Specification_v0.3.3.md  User_Events_and_Hash_Chained_Log_Standard_v0.3.3.md  v0.3.3-alpha_Atmospheric_and_Cloud_System.md  v0.3.3-alpha_CI_Oracle_and_Validation_Protocol.md  v0.3.3-alpha_Core_Physics_Specification.md  v0.3.3-alpha_Deterministic_Numerics_Standard.md  v0.3.3-alpha_LoD_and_Cascading_Simulation_System.md  v0.3.3-alpha_Memory_Architecture_and_SAB_Layout.md  v0.3.3-alpha_Torsion_Tensor_Module.md  v0.3.3-alpha_Unity_and_Web_Interop_Specification.md  v0.3.3-alpha_User_Events_and_Hash_Chained_Log_Standard.md
archive/: PHYSICS_INTEGRATION_BENCHMARK_REPORT.md  PR_TITLE_AND_DESCRIPTION.md  SPRINT_SUMMARY_REGv1.md
config/: parameters.json
config/parameters/: ChihuahuanDesert.json  LoessPlateau.json  REGv2_Microbial.json  genesis_crop_params.json
docs/: CESIUM_GUIDE.md  CONSOLIDATED_FIXES_2025-11-17.md  CURRENT_SPRINT.md  DECKGL_CAMERA_SYNC_FIX.md  ENVIRONMENT.md  GENESIS_AI_INTEGRATION_PATTERNS.md  GEO-v2_Progress.md  IMAGERY_FIX_SUMMARY.md  INTERCONNECTION_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHYS-v2.2_Progress.md  core-architecture-v3.0.md  core-architecture.md  integration_example_regv1.md  integrators.md  v2.1_Upgrade.md  v2.2_ImpactMap_CesiumPivot.md  v2.2_Upgrade.md
docs/archive/: CODE_OPTIMIZATION_SUMMARY.md  IMAGERY_FIX_SUMMARY.md
docs/science/: macroscale_regeneration.md  microscale_hydrology.md
examples/: atmosphere_demo.py  groundwater_demo.py  soil_moisture_demo.py
include/: barriers.h  grid.h
src/: rng.c
src/api/: negentropic.c  negentropic.h
src/core/: neg_error.c  parameter_loader.c  rng.c  state.c  state.h
src/core/include/: neg_error.h  platform.h  rng.h  se3_types.h  state_versioning.h
src/core/integrators/: clebsch.h  clebsch_collective.c  integrators.c  integrators.h  lod_dispatch.c  rkmk4.c  workspace.c  workspace.h  workspace_slab.c  workspace_slab.h
src/core/math/: fixed_math.c  fixed_math.h
src/core/torsion/: torsion.c  torsion.h
src/grid/: grid.c  sparse_octree.c  sparse_octree.h
src/include/: neg_error.c  neg_error.h  platform.h  rng.h  se3_types.h  serialization.h  state_versioning.h
src/physics/: __init__.py
src/physics/atmosphere/: __init__.py
src/physics/hydrology/: __init__.py
src/physics/soil/: __init__.py
src/simulation/: __init__.py  integrator.py  kernel.py  scheduler.py
src/solvers/: README_REGENERATION.md  atmosphere_biotic.c  atmosphere_biotic.h  hydrology_richards_lite.c  hydrology_richards_lite.h  hydrology_richards_lite_internal.h  regeneration_cascade.c  regeneration_cascade.h  regeneration_microbial.c  regeneration_microbial.h  soil_moisture.c
tests/: Makefile  ci_oracle.py  integrator_benchmark.py  integrator_smoke_test.c  physics_integration_benchmark.c  rng_test.c  test_barriers.c  test_biotic_pump.c  test_fixed_math_luts.c  test_randomization.c  test_regeneration_cascade.c  test_regeneration_microbial  test_regeneration_microbial.c  test_richards_lite.c
tests/integrators/: integrator_conservation_test.c  test_rkmk4.c  torsion_unit_test.c
tools/: precision_profiler.py
web/: .env.example  .gitignore  DEBUGGING.md  README.md  build-wasm.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/adapters/: prithvi-adapter.ts  prithvi-adapter.ts.bak
web/src/geometry/: clima-matrices.ts  get-face.ts
web/src/types/: geo-api.ts  negentropic_core.d.ts
web/src/visualization/: variance_overlay.ts
web/src/workers/: core-worker.ts  render-worker.ts
